force-app/main/default/objects/LeadGen__c/LeadGen__c.object-meta.xml
<CustomObject>
    <label>Lead Generation Page</label>
    <nameField>
        <label>Lead Generation Page Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Lead Generation Pages</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>