force-app/main/default/objects/LeadGen__c/fields/Body_Image_URL__c.field-meta.xml
<CustomField>
    <fullName>Body_Image_URL__c</fullName>
    <label>Body Image URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>