force-app/main/default/objects/LeadGen__c/fields/Body_Text_Bottom__c.field-meta.xml
<CustomField>
    <fullName>Body_Text_Bottom__c</fullName>
    <label>Body Text Bottom</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>