force-app/main/default/objects/LeadGen__c/fields/Hero_Image_URL__c.field-meta.xml
<CustomField>
    <fullName>Hero_Image_URL__c</fullName>
    <label>Hero Image URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>