force-app/main/default/objects/LeadGen__c/fields/Image_Text__c.field-meta.xml
<CustomField>
    <fullName>Image_Text__c</fullName>
    <label>Image Text</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>