force-app/main/default/objects/LeadGen__c/fields/Published_URL__c.field-meta.xml
<CustomField>
    <fullName>Published_URL__c</fullName>
    <label>Published URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>